fix autocomplete list z-index

--- a/pic.css
+++ b/pic.css
@@ -422,6 +422,7 @@ main {
     border-top: none;
     visibility: hidden;
     top: 81px;
+    z-index: 10;
 }
 
 .field__autocomplete-item {
